--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@ html {
 body {
 	background-color: #fff;
 	font: normal 16px Arial, sans-serif;
-	width: 65%;
+	/*width: 96%;*/
 	min-width: 960px;
-	margin: 10px auto;
+	margin: 10px 20px;
 	padding: 15px;
 	border-radius: 10px;
 }
@@ -135,10 +135,10 @@ strong {
 	text-align: right;
 }
 
-table {text-align: left; margin-left: 3rem; margin-top:4rem; font-size: 1.5rem;}
-tr {height: 3rem;}
-td.request, th.request {width: 30%; padding-left: 15px;}
-label {max-width: 80%;}
+/*table {text-align: left; margin-left: 3rem; margin-top:4rem; font-size: 1.5rem;}*/
+/*tr {height: 3rem;}*/
+/*td.request, th.request {width: 30%; padding-left: 15px;}*/
+/*label {max-width: 80%;}*/
 tr.input:hover {background-color: #ccc;}
 
 span.instructions {color: #fff; font-size: 1.2rem;}
@@ -147,7 +147,7 @@ span.instructions {color: #fff; font-size: 1.2rem;}
 tr.complete { background-color: #ddd;}
 
 td.viewReq, th.viewReq {max-width: 100px;}
-#purchaseRequestList {font-size: 1rem;}
+/*#purchaseRequestList {font-size: 1rem;}*/
 
 /* Override JQuery UI's oversize widgets */
 .ui-widget {
