--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,24 @@ strong {
 	text-align: right;
 }
 
+.vcenter:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */
+}
+
+.navdiv {
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	position: relative;
+	top: 100px;
+	background-color: #ddd;
+	border-radius: 3px;
+}
+
 /*table {text-align: left; margin-left: 3rem; margin-top:4rem; font-size: 1.5rem;}*/
 /*tr {height: 3rem;}*/
 /*td.request, th.request {width: 30%; padding-left: 15px;}*/
