add request archiving

--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ tr.complete { background-color: #ddd;}
 	cursor: pointer;
 }
 
+.isbn {
+	max-width: 100px;
+}
+
 /* Override JQuery UI's oversize widgets */
 .ui-widget {
 	/* font-size: inherit !important;*/
